# SmritiMeds

./: .env.example  .gitignore  ARCHITECTURE.md  PRODUCT_REQUIREMENTS.md  README.md  __init__.py  anthropic_client.py  app.py  config.py  local_pill_pipeline.py  notebooks  ocr_models.py  parser.py  pill_detector.py  pill_identifier_model.py  prompting.py  pyproject.toml  requirements-local-vision.txt  requirements-ocr.txt  requirements.txt
api/: __init__.py  main.py
backend/: __init__.py  main.py
data/Ultralytics-Medical-pills/: README.md
docs/: ARCHITECTURE.md  PILLSURE_NOTE.md  PRODUCT_REQUIREMENTS.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
notebooks/: 01_claude_vision_smoke_test.ipynb  02_prompt_eval_and_schedule_render.ipynb
research/notebooks/: 01_claude_vision_smoke_test.ipynb  02_prompt_eval_and_schedule_render.ipynb
sample_images/: sample_lab_report_medocr.txt  sample_prescription_medocr.txt
scripts/: prefetch_ocr_models.py  train_yolo_medical_pills.py
smritimeds/: __init__.py  anthropic_client.py  config.py  local_pill_pipeline.py  ocr_models.py  parser.py  pill_detector.py  pill_identifier_model.py  prompting.py
tests/: test_parser.py
tools/scripts/: prefetch_ocr_models.py  train_yolo_medical_pills.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  styles.css
